--- a/arts/kde/Makefile.am
+++ b/arts/kde/Makefile.am
@@ -27,5 +27,5 @@ check_PROGRAMS = kiotest kiotestslow
 kiotest_SOURCES = kiotest.cc
 kiotestslow_SOURCES = kiotestslow.cc
 
-kiotest_LDADD	= libartskde.la -lqtmcop $(top_builddir)/arts/soundserver/libkmedia2.la $(top_builddir)/arts/soundserver/libsoundserver_idl.la
+kiotest_LDADD	= libartskde.la -lqtmcop -lkmedia2 -lsoundserver_idl
 kiotestslow_LDADD	= $(kiotest_LDADD)
