We might need those mimetypes in the future.... s/might/will/ ;)
svn path=/trunk/kdelibs/; revision=137190

--- a/mimetypes/Makefile.am
+++ b/mimetypes/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = application text audio video image inode message
+SUBDIRS = application text audio video image inode message multipart
 
 data_DATA = all.desktop allfiles.desktop
 datadir = $(kde_mimedir)/all
