--- a/security/crypto/Makefile.am
+++ b/security/crypto/Makefile.am
@@ -1,12 +1,12 @@
 INCLUDES = $(all_includes) $(SSL_INCLUDES)
-kde_module_LTLIBRARIES = libkcm_crypto.la
+kde_module_LTLIBRARIES = kcm_crypto.la
 
-libkcm_crypto_la_SOURCES = crypto.cpp certexport.cpp kdatetimedlg.cpp
+kcm_crypto_la_SOURCES = crypto.cpp certexport.cpp kdatetimedlg.cpp
 
-libkcm_crypto_la_LDFLAGS  = $(all_libraries) $(SSL_LDFLAGS) -module -avoid-version -no-undefined
-libkcm_crypto_la_LIBADD = -lkdeui $(LIB_KFILE) $(LIBSSL)
+kcm_crypto_la_LDFLAGS  = $(all_libraries) $(SSL_LDFLAGS) -module -avoid-version -no-undefined
+kcm_crypto_la_LIBADD = -lkdeui $(LIB_KFILE) $(LIBSSL)
 
-libkcm_crypto_la_METASOURCES = AUTO
+kcm_crypto_la_METASOURCES = AUTO
 
 noinst_HEADERS = crypto.h certexport.h kdatetimedlg.h
 
@@ -14,7 +14,7 @@ KDE_ICON = crypto
 
 messages: rc.cpp
 	: > rc.cpp
-	$(XGETTEXT) $(libkcm_crypto_la_SOURCES) -o $(podir)/kcmcrypto.pot
+	$(XGETTEXT) $(kcm_crypto_la_SOURCES) -o $(podir)/kcmcrypto.pot
 
 data_DATA = crypto.desktop
 datadir = $(kde_appsdir)/Settings/Personalization
