--- a/kdeprint/tools/escputil/escputil.desktop
+++ b/kdeprint/tools/escputil/escputil.desktop
@@ -7,8 +7,7 @@ Name[de]=Epson InkJet
 Name[fr]=Imprimante jet d'encre Epson
 Name[nn]=EPSON-blekkskrivar
 Name[pt]=Jacto de Tinta da EPSON
-Name[pt_BR]=Jacto de Tinta da EPSON
 Name[xx]=xx
 Type=Service
 
-X-KDE-Library=libescputil
+X-KDE-Library=escputil
