--- a/kdecore/Makefile.am
+++ b/kdecore/Makefile.am
@@ -22,7 +22,7 @@
 
 INCLUDES = $(all_includes)
 
-SUBDIRS = . tests
+SUBDIRS = malloc . tests
 
 lib_LTLIBRARIES = libkdefakes.la libkdecore.la
 
@@ -81,7 +81,7 @@ libkdecore_la_SOURCES = libintl.cpp kapplication.cpp kdebug.cpp netwm.cpp  \
 	kmultipledrag.cpp kstaticdeleter.cpp kappdcopiface.cpp kappdcopiface.skel
 
 libkdecore_la_LDFLAGS = $(QT_LDFLAGS) $(KDE_RPATH) $(KDE_MT_LDFLAGS) $(X_LDFLAGS) $(USER_LDFLAGS) -version-info 4:0 -no-undefined
-libkdecore_la_LIBADD = $(LIB_DCOP) ../libltdl/libltdlc.la $(LIB_XEXT) $(LIBRESOLV) $(LIBXINERAMA) $(LIB_DMALLOC)
+libkdecore_la_LIBADD = malloc/libklmalloc.la $(LIB_DCOP) ../libltdl/libltdlc.la $(LIB_XEXT) $(LIBRESOLV) $(LIBXINERAMA) $(LIB_DMALLOC)
 
 libkdecore_la_METASOURCES = AUTO
 
