defining CXXFLAGS in a c only library is quite useless -CXXFLAGS = @CXXFLAGS@ @KDE_FORCE_INLINE@ +AM_DEFS = $(KDE_FORCE_INLINE)
svn path=/trunk/kdelibs/; revision=137721

--- a/kdecore/malloc/Makefile.am
+++ b/kdecore/malloc/Makefile.am
@@ -22,7 +22,7 @@
 
 INCLUDES = $(all_includes)
 
-CXXFLAGS = @CXXFLAGS@ @KDE_FORCE_INLINE@
+AM_DEFS = $(KDE_FORCE_INLINE)
 
 noinst_LTLIBRARIES = libklmalloc.la
 
