--- a/kdecore/malloc/configure.in.in
+++ b/kdecore/malloc/configure.in.in
@@ -9,9 +9,9 @@ kde_fast_malloc=
 AC_ARG_ENABLE(fast-malloc,
     [  --enable-fast-malloc    Use own malloc implementation (experimental) : yes,no,full (disabled by default)],
     [
-    if test "$enableval" == "full"; then
+    if test "$enableval" = "full"; then
         kde_fast_malloc=full
-    elif test "$enableval" == "yes"; then
+    elif test "$enableval" = "yes"; then
         kde_fast_malloc=yes
     else
         kde_fast_malloc=no
@@ -48,7 +48,7 @@ dnl warn on untested platforms
     esac
 fi
 
-if test "$kde_fast_malloc" == "yes"; then
+if test "$kde_fast_malloc" = "yes"; then
 dnl $KDE_MALLOC needs glibc (__libc_malloc etc.)
     AC_CACHE_CHECK([if the libc is glibc],kde_cv_libc_glibc,
         [AC_TRY_COMPILE(
@@ -61,7 +61,7 @@ dnl $KDE_MALLOC needs glibc (__libc_malloc etc.)
             [kde_cv_libc_glibc=yes],
             [kde_cv_libc_glibc=no])
         ])
-    if test "$kde_cv_libc_glibc" == "yes"; then
+    if test "$kde_cv_libc_glibc" = "yes"; then
         AC_DEFINE(KDE_MALLOC_GLIBC, 1, [The libc used is glibc])
     else
         AC_MSG_ERROR([This libc is not supported for fast malloc. Either use --enable-fast-malloc=full, or don't use it at all.])
@@ -69,9 +69,9 @@ dnl $KDE_MALLOC needs glibc (__libc_malloc etc.)
 fi
 
 AC_MSG_CHECKING(whether to enable fast malloc)
-if test "$kde_fast_malloc" == "yes"; then
+if test "$kde_fast_malloc" = "yes"; then
     AC_MSG_RESULT(yes)
-elif test "$kde_fast_malloc" == "full"; then
+elif test "$kde_fast_malloc" = "full"; then
     AC_DEFINE(KDE_MALLOC_FULL, 1, [Make alloc as fast as possible])
     AC_MSG_RESULT([yes(full)])
 else
