Updated kded.cpp for KDirWatch changes: check for remount mounted dirs is done in KDirWatch now. Added a update script to move config parameters (NFS)PollInterval from kded.rc to global.rc.
svn path=/trunk/kdelibs/; revision=138010

--- a/kded/Makefile.am
+++ b/kded/Makefile.am
@@ -62,5 +62,8 @@ noinst_HEADERS = kbuildsycoca.h kbuildservicetypefactory.h \
 servicetype_DATA = kdedmodule.desktop
 servicetypedir = $(kde_servicetypesdir)
 
+update_DATA = kded.upd
+updatedir = $(kde_datadir)/kconf_update
+
 dummy.cpp:
 	echo > dummy.cpp
