--- a/configure.in.in
+++ b/configure.in.in
@@ -228,6 +228,17 @@ AC_DEFINE_UNQUOTED(X11_RGBFILE, "$rgb_file", [where rgb.txt is in])
 
 AC_MSG_CHECKING([for Compiler version])
 case "$CXX" in
+xlC*)
+  # The __IBMCPP__ macro contains the C++ compiler version in decimal notation.
+  echo "__IBMCPP__" > conftest.C
+
+  # Preprocess and at least make sure it's returned a number.
+  $CXX -E conftest.C 2>&1 | grep "^[0-9][0-9][0-9]" > conftest.i
+
+  # "502" would signify version 5.0.2.
+  clean_compiler_version="$CXX version "`cut -b1 conftest.i`"."`cut -b2 conftest.i`"."`cut -b3 conftest.i`
+  rm -f conftest.C conftest.i
+ ;;
 KCC*)
   # KCC doesn't give it's version, if nothing is compiled (the frontend
   # isn't called in that case)
@@ -254,7 +265,21 @@ AC_DEFINE_UNQUOTED(KDE_COMPILER_VERSION, "$clean_compiler_version", [what C++ co
 AC_MSG_RESULT($clean_compiler_version)
 
 AC_MSG_CHECKING([for uname])
-uname_string=`uname -smr`
+case `uname -s` in
+AIX)
+  IBM_ARCH=PowerPC #good default
+  if [ -x /usr/sbin/lsdev -a -x /usr/sbin/lsattr ]; then
+    IBM_CPU_ID=`/usr/sbin/lsdev -C -c processor -S available | head -1 | awk '{ print $1 }'`
+    if /usr/sbin/lsattr -El ${IBM_CPU_ID} | grep ' POWER' >/dev/null 2>&1; then
+      IBM_ARCH=POWER
+    fi
+  fi
+  uname_string=`uname -svr | awk '{ print $1" "$3"."$2 }'`" ${IBM_ARCH}"
+ ;;
+*)
+  uname_string=`uname -smr`
+ ;;
+esac
 AC_DEFINE_UNQUOTED(KDE_COMPILING_OS, "$uname_string", [what OS used for compilation])
 AC_MSG_RESULT($uname_string)
 
