--- a/configure.in.in
+++ b/configure.in.in
@@ -233,7 +233,9 @@ xlC*)
   echo "__IBMCPP__" > conftest.C
 
   # Preprocess and at least make sure it's returned a number.
+  changequote(, )dnl
   $CXX -E conftest.C 2>&1 | grep "^[0-9][0-9][0-9]" > conftest.i
+  changequote([, ])dnl
 
   # "502" would signify version 5.0.2.
   clean_compiler_version="$CXX version "`cut -b1 conftest.i`"."`cut -b2 conftest.i`"."`cut -b3 conftest.i`
