for tackat with love ;)
svn path=/trunk/kdebase/kcontrol/crypto/; revision=138865

--- a/security/crypto/crypto.desktop
+++ b/security/crypto/crypto.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Icon=lock
+Icon=encrypted
 Type=Application
 Exec=kcmshell crypto
 DocPath=kcontrol/crypto.html
@@ -61,7 +61,7 @@ Comment[af]=konfigureer ssl, bestuur sertifikate, en ander kriptografie instelli
 Comment[ar]=تعريفات SSL, ادارة شهادات الإعتمادية, بالإضافة الى خدمات الترميز الأخرى
 Comment[az]=SSL,vəsiqə,vəsiqə qurğuları,digər şifrləmə qurğuları
 Comment[bg]=Настройка на SSL, управление на сертификата и други параметри закриптиране
-Comment[bs]=Postavke SSL, upravljanje certifikatima i ostalim kriptografskim postavkama
+Comment[bs]=Podešavanje SSL, upravljanje certifikatima i ostalim kriptografskim postavkama
 Comment[ca]=Configura SSL, gestiona certificats, i altres valors de criptografia
 Comment[cs]=Nastavení SSL, správa certifikátů a ostatní kryptografická nastavení
 Comment[da]=Indstil SSL, håndtér certifikater og andre kryptografiske indstillinger
@@ -87,7 +87,7 @@ Comment[lv]=Konfigurēt SSL, menedžēt sertifikātus, un citus kriptogrāfijas 
 Comment[mk]=Конфигурација на SSL, менаџмент на сертификати и други криптографски поставки
 Comment[mt]=Ikkonfigura l-SSL, immaniġġja ċertifikati, u konfigurazzjoni oħra tal-kriptografijaConfigure SSL, manage certificates, and other cryptography setings
 Comment[nb]=Konfigurering av SSL, behandling av sertifikater og andre krypteringsinnstillinger
-Comment[nl]=configureer SSL, beheer certificaten, en andere cryptografische instellingen
+Comment[nl]=Configureer SSL, beheer certificaten, en andere cryptografische instellingen
 Comment[nn]=Oppsett av SSL, sertifikat og andre krypteringsinnstillingar
 Comment[oc]=Configura SSL, gestiona certificats, e autres valors de criptografia
 Comment[pl]=Konfiguracja SSL, zarządzanie certyfikatami, inne ustawienia kryptograficzne
@@ -122,19 +122,19 @@ Keywords[eo]=ĉifrado,SSL,HTTPS,atestoj,ĉifroj,TLS,sekureco
 Keywords[es]=Criptografía,encriptación,SSL,https,certificados,cifrados,TLS,seguro,seguridad
 Keywords[et]=Crypto,Krüpto,Krüptograafia,krüpteerimine,SSL,https,sertifikaadid,šifrid,TLS,tuvaline,turvalisus
 Keywords[fi]=Salaus,Krypto,SSL,https,sertifikaatit,salaimet,TLS,turvallinen,turvallisuus
-Keywords[fr]=crypto,krypto,cryptographie,cryptage,encryptage,chiffrage,ssl,https,certificats,tls,sécurité
+Keywords[fr]=cryptographie,cryptage,encryptage,chiffrage,ssl,https,certificats,tls,sécurité
 Keywords[he]=מאובטח,אבטחה,TLS,תעודות,צפנים,https,SSL,הצפנה
 Keywords[hu]=Crypto,Krypto,kriptográfia,titkosítás,SSL,https,tanúsítványok,kódolás,TLS,biztonságos,biztonság
 Keywords[id]=Kripto,Kriptografi,enkripsi,SSL,https,sertifikat,ciphers,TLS,secure,security
 Keywords[is]=Dulritun,Dulmál,Krypto,SSL,https,skilríki,brenglun,TLS,öryggi,öruggt
-Keywords[it]=crittografia,cifratura,SSL,https,certificati,cifrari,TLS,sicurezza
+Keywords[it]=crittografia,cifratura,SSL,https,certificati,cifrari,TLS,sicuro,sicurezza
 Keywords[ja]=暗号化,Krypto,暗号作成形式,暗号化,SSL,http,証明書,暗号,TLS,セキュア,セキュリティ
 Keywords[ko]=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security,보안,지킴,지키기,열쇠,열쇠글,암호,암호화
 Keywords[lt]=Crypto,Krypto,Cryptography,kriptografija,encryption,šifravimas,SSL,https,certificates,sertifikatai,ciphers,šifrai,TLS,secure,saugus,security,saugumas,apsauga
 Keywords[lv]=Kripto,Kriptogrāfija,kodēšana,SSL,https,sertifkāti,kiperi,TLS,droši,drošība
 Keywords[mt]=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security,kriptografija
 Keywords[nb]=Krypto,Kryptering,SSL,https,sertifikater,ciphers
-Keywords[nl]=crypto,krypto,cryptografie,encryptie,ssl,https,certificaten,ciphers,tls,beveiliging,veilig,codering,gecodeerd
+Keywords[nl]=crypto,krypto,cryptografie,encryptie,ssl,https,certificaten,ciphers,tls,beveiliging,veilig,codering,gecodeerd,versleuteling
 Keywords[nn]=Crypto,Krypto,kryptering,SSL,https,sertifikat,TLS,sikker,tryggleik
 Keywords[pl]=Krypto,Kryptografia,szyfrowanie,SSL,https,ceryfikaty,szyfry,TLS,bezpieczny,bezpieczeństwo
 Keywords[pt]=Cifra,Criptografia,encriptação,SSL,https,certificados,cifras,TLS,seguro,segurança
