--- a/kdeprint/cups/Makefile.am
+++ b/kdeprint/cups/Makefile.am
@@ -26,10 +26,10 @@ noinst_HEADERS = cupsinfos.h ipprequest.h kmcupsfactory.h kmcupsjobmanager.h kmc
 
 bin_PROGRAMS = make_driver_db_cups cupsdoprint
 make_driver_db_cups_SOURCES = make_driver_db_cups.c
-make_driver_db_cups_LDADD = -lz ../libdriverparse.a
+make_driver_db_cups_LDADD = -lz ../libdriverparse.a $(top_builddir)/kdecore/libkdefakes.la
 
 cupsdoprint_SOURCES = cupsdoprint.c
-cupsdoprint_LDADD = $(LIB_CUPS)
+cupsdoprint_LDADD = $(LIB_CUPS) $(top_builddir)/kdecore/libkdefakes.la
 cupsdoprint_LDFLAGS = $(all_libraries)
 
 entry_DATA = cups.print
