remove the pattern for RPM. the file magic works much more reliable than that
svn path=/trunk/kdelibs/; revision=139101

--- a/mimetypes/application/x-rpm.desktop
+++ b/mimetypes/application/x-rpm.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=MimeType
 MimeType=application/x-rpm
 Icon=rpm
-Patterns=*.rpm;
 Comment=RPM package file
 Comment[af]=rpm paket lêer
 Comment[ar]=حزمة برمجية (RPM)
@@ -43,6 +42,7 @@ Comment[oc]=FiquièR paquet RPM
 Comment[pl]=Pakiet RPM
 Comment[pt]=Pacote RPM
 Comment[pt_BR]=Pacote RPM
+Comment[ro]=Fişier pachet RPM
 Comment[ru]=Пакет RPM
 Comment[sk]=RPM súbor
 Comment[sl]=Paket RPM
