shit, RPMS are just too often used on ftp servers to make their detection rely only on magic
svn path=/trunk/kdelibs/; revision=139112

--- a/mimetypes/application/x-rpm.desktop
+++ b/mimetypes/application/x-rpm.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Type=MimeType
 MimeType=application/x-rpm
 Icon=rpm
+Patterns=*.rpm;
 Comment=RPM package file
 Comment[af]=rpm paket lêer
 Comment[ar]=حزمة برمجية (RPM)
