--- a/kdecore/tests/Makefile.am
+++ b/kdecore/tests/Makefile.am
@@ -26,9 +26,10 @@ check_PROGRAMS = kconfigtest klocaletest kprocesstest ksimpleconfigtest \
 	kdebugtest ksocktest kstringhandlertest kcmdlineargstest kapptest \
 	kmemtest kidlservertest kidlclienttest dcopkonqtest kipctest \
 	cplusplustest kiconloadertest kresolvertest kmdcodectest knotifytest \
-	ksortablevaluelisttest krfcdatetest testqtargs
+	ksortablevaluelisttest krfcdatetest testqtargs kprociotest
 
-noinst_HEADERS = kconfigtest.h klocaletest.h kprocesstest.h KIDLTest.h kipctest.h
+noinst_HEADERS = kconfigtest.h klocaletest.h kprocesstest.h KIDLTest.h \
+		kipctest.h kprociotest.h
 
 METASOURCES = AUTO
 
@@ -62,3 +63,4 @@ knotifytest_SOURCES = knotifytest.cpp
 ksortablevaluelisttest_SOURCES = ksortablevaluelisttest.cpp
 krfcdatetest_SOURCES = krfcdatetest.cpp
 testqtargs_SOURCES = testqtargs.cpp
+kprociotest_SOURCES = kprociotest.cpp
