Disabling installation of libkab. It's now only used by kab2kabc which links it statically. From now on please use only kdelibs/kabc as KDE addressbook API.
svn path=/trunk/kdelibs/; revision=139942

--- a/kab/Makefile.am
+++ b/kab/Makefile.am
@@ -1,13 +1,8 @@
 INCLUDES= $(all_includes) 
 
-lib_LTLIBRARIES = libkab.la
+noinst_LTLIBRARIES = libkab.la
 KABVERSION=	4.0.0
 KABPATCH=	0
-
-include_HEADERS = \
-	kabapi.h \
-	addressbook.h \
-	qconfigDB.h 
 
 libkab_la_SOURCES	= \
 	kabapi.cc \
@@ -18,9 +13,3 @@ libkab_la_LDFLAGS = $(KDE_MT_LDFLAGS) -version-info 4:0 -no-undefined
 libkab_la_LIBADD = $(LIB_KDEUI) 
 
 libkab_la_METASOURCES = AUTO
-
-picsdir = $(kde_datadir)/kab/pics
-pics_DATA = 
-
-templatedir = $(kde_datadir)/kab
-template_DATA = template.kab template.config
