CVS_SILENT Corrected typographical errors
svn path=/trunk/kdelibs/; revision=139956

--- a/mimetypes/image/x-portable-greymap.desktop
+++ b/mimetypes/image/x-portable-greymap.desktop
@@ -4,4 +4,12 @@ Type=MimeType
 MimeType=image/x-portable-bitmap
 Icon=image
 Patterns=*.pgm;
-Comment=Portable Greymap File Format
+Comment=Portable Graymap File Format
+Comment[bs]=Portable Greymap File format
+Comment[es]=Formato de archivo portable Greymap
+Comment[he]=תבנית קובץ מפת גווני אפור ניידת
+Comment[hu]=Portable Greymap fájlformátum
+Comment[nl]=overdraagbare greymap bestandsformaat
+Comment[pt]=Formato Portável de 'Greymaps'
+Comment[pt_BR]=Formato Portável de 'Greymaps'
+Comment[sv]=Flyttbart gråskalefilformat
