Moved code for openPassDlg and messageBox from UIServer to Observer, so that the dialog box is now popped up by the application process, leaving UIServer free to process requests for e.g. progress dialog boxes (instead of blocking any app that needs one!). Concept okayed by Waldo, testing done with Georges.
DCOP calls to the uiserver will still work, they haven't been removed.

Some SSL dialogs, and the rename/skip dialogs are still in the uiserver, but should move too.

svn path=/trunk/kdelibs/; revision=139967

--- a/kio/kio/Makefile.am
+++ b/kio/kio/Makefile.am
@@ -65,7 +65,7 @@ include_HEADERS = \
 libkiocore_la_SOURCES = \
 	kshred.cpp \
 	kprotocolmanager.cpp \
-	slave.cpp slaveinterface.cpp \
+	slave.cpp slaveinterface.cpp observer.stub \
 	sessiondata.cpp	scheduler.cpp \
 	connection.cpp \
 	job.cpp global.cpp \
