Don't require perl for a build.
svn path=/trunk/kdelibs/; revision=140261

--- a/kdewidgets/Makefile.am
+++ b/kdewidgets/Makefile.am
@@ -26,6 +26,5 @@ kdewidgets_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN) -module
 kdewidgets_la_LIBADD = $(LIB_KDEUI) $(LIB_KFILE)
 kdewidgets_la_SOURCES = classpreviews.cpp kdewidgets.cpp 
 
-kdewidgets.cpp: kde.widgets
-	$(srcdir)/makekdewidgets -o $@ $<
-
+make-kdewidgets: kde.widgets
+	$(srcdir)/makekdewidgets -o kdewidgets.cpp $<
