ok, I did a big mistake. created qt-messages with a stock xgettext
svn path=/trunk/kdelibs/; revision=140291

--- a/Makefile.am
+++ b/Makefile.am
@@ -87,13 +87,15 @@ kdedoc:
 	makekdedoc -p'--skip-internal' --outputdir=$(top_builddir)/srcdoc
 
 qtmessages:
-	cd $(top_srcdir)/../qt-copy/src ;\
+	if test x$(top_srcdir) = x; then top_srcdir=. ; else top_srcdir=$(top_srcdir); fi ;\
+	cd $$top_srcdir/../qt-copy/src ;\
 	find . -name "*.cpp" | grep -v moc_ > list ;\
 	for file in qfiledialog qcolordialog qprintdialog \
 		qurloperator qftp qhttp qlocal qerrormessage; do \
 		grep -v $$file list > list.new && mv list.new list ;\
 	done ;\
-	xgettext -C -ktr `cat list` 
-	mv $(top_srcdir)/../qt-copy/src/messages.po $(top_srcdir)
+	xgettext -C -ktr `cat list`  ;\
+	cd ../../kdelibs ;\
+	mv $$top_srcdir/../qt-copy/src/messages.po $$top_srcdir
 	echo "remove the header from messages.po and move to qt-messages.pot"
 
