- Modified the internal driver structure to be able to support dynamic options - More management for SuSE handler (LPR plugin): can modify the driver   settings now
svn path=/trunk/kdelibs/; revision=140299

--- a/kdeprint/lpr/Makefile.am
+++ b/kdeprint/lpr/Makefile.am
@@ -8,7 +8,7 @@ kdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
 			     kmlprjobmanager.cpp matichelper.cpp \
 			     klprprinterimpl.cpp printcapentry.cpp \
 			     lprsettings.cpp kmconfiglpr.cpp apshandler.cpp \
-			     lprngtoolhandler.cpp susehandler.cpp
+			     lprngtoolhandler.cpp susehandler.cpp susehelper.cpp
 kdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
 kdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(top_builddir)/kdecore/libkdefakes.la
 kdeprint_lpr_la_METASOURCES = AUTO
@@ -18,7 +18,7 @@ noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 		 kmlpruimanager.h lpchelper.h lpqhelper.h \
 		 kmlprjobmanager.h matichelper.h klprprinterimpl.h \
 		 lprsettings.h kmconfiglpr.h apshandler.h \
-		 lprngtoolhandler.h susehandler.h
+		 lprngtoolhandler.h susehandler.h susehelper.h
 
 bin_PROGRAMS = make_driver_db_lpr
 make_driver_db_lpr_SOURCES = make_driver_db_lpr.c
