--- a/kstyles/keramik/Makefile.am
+++ b/kstyles/keramik/Makefile.am
@@ -2,6 +2,8 @@
 AM_CPPFLAGS = -DQT_PLUGIN
 
 INCLUDES = -I$(top_srcdir)/kdefx $(all_includes)
+# qembed's output needs that...
+KDE_CXXFLAGS = -UQT_NO_ASCII_CAST
 noinst_HEADERS = keramik.h pixmaploader.h
 kde_style_LTLIBRARIES = keramik.la
 keramik_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN) -module
