adding mimetype for TGIF graphics and added an icon to rfc822 that Tackat will draw soon
svn path=/trunk/kdelibs/; revision=140704

--- a/mimetypes/message/rfc822.desktop
+++ b/mimetypes/message/rfc822.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Type=MimeType
 MimeType=message/rfc822
+Icon=message
 Patterns=
 Comment=Email message
 Comment[af]=e-pos boodskap
@@ -29,11 +30,12 @@ Comment[lt]=E.pašto laiškas
 Comment[lv]=EPasta ziņojums
 Comment[mt]=Messaġġ imejl
 Comment[nb]=Epostmelding
-Comment[nl]=e-mailbericht
+Comment[nl]=E-mailbericht
 Comment[nn]=E-postmelding
 Comment[pl]=List elektroniczny
 Comment[pt]=Mensagem de email
 Comment[pt_BR]=Mensagem de e-mail
+Comment[ro]=Fişier email
 Comment[ru]=Сообщение email
 Comment[sk]=E-Mail správa
 Comment[sl]=E-poštno sporočilo
