--- a/arts/configure.in.in
+++ b/arts/configure.in.in
@@ -92,7 +92,7 @@ fi
 AC_SUBST(LIBASOUND)
 
 dnl
-dnl ensure that the user has aRts-0.7.1 installed
+dnl ensure that the user has aRts-1.0.0 or newer installed
 dnl
 
 dnl Check for artsc-config
@@ -100,7 +100,7 @@ dnl no need to, AC_BASE_PATH_KDE does it for us already (see also
 dnl comment below for mcopidl)
 dnl AC_PATH_PROG(ARTSCCONFIG, artsc-config, no)
 
-ARTS_WANT_VERSION=0.7.1
+ARTS_WANT_VERSION=1.0.0
 ARTS_HAVE_VERSION=none
 ARTS_HAVE_PREFIX=none
 
