Added description for keramik
svn path=/trunk/kdelibs/; revision=140923

--- a/kstyles/themes/Makefile.am
+++ b/kstyles/themes/Makefile.am
@@ -1,9 +1,9 @@
 
 data_DATA = qtplatinum.themerc qtcde.themerc qtmotif.themerc qtwindows.themerc \
-	qtmotifplus.themerc qtsgi.themerc \
-	system.themerc systemalt.themerc highcolor.themerc mega.themerc \
-	kstep.themerc marble.themerc \
-	default.themerc b3.themerc light-v2.themerc light-v3.themerc
+	qtmotifplus.themerc qtsgi.themerc system.themerc \
+	system.themerc systemalt.themerc highcolor.themerc \
+	marble.themerc default.themerc b3.themerc light-v2.themerc \
+	light-v3.themerc keramik.themerc
 datadir = $(kde_datadir)/kstyle/themes
 
 EXTRA_DIST = $(data_DATA)
