--- a/kio/Makefile.am
+++ b/kio/Makefile.am
@@ -20,7 +20,7 @@ AM_CPPFLAGS = -D_LARGEFILE64_SOURCE
 
 INCLUDES=  -I$(srcdir)/.. $(all_includes) $(SSL_INCLUDES)
 
-SUBDIRS = kssl kio kfile . misc pics tests
+SUBDIRS = kssl kio bookmarks kfile . misc pics tests
 
 lib_LTLIBRARIES = libkio.la
 
@@ -29,7 +29,7 @@ libkio_la_SOURCES = dummy.cpp
 libkio_la_LDFLAGS = -version-info 4:0 -no-undefined $(all_libraries) \
 	$(KDE_MT_LDFLAGS)
 libkio_la_LIBADD = kssl/libkssl.la kio/libkiocore.la \
-	kio/libksycoca.la kfile/libkfile.la \
+	kio/libksycoca.la bookmarks/libkbookmarks.la kfile/libkfile.la \
 	../kdeui/libkdeui.la ../kdesu/libkdesu.la \
 	$(LIBZ) $(LIBFAM) $(LIBVOLMGT)
 
