Fix src!=build. If people would think before _overwriting_ already working stuff they might see the need to mention top_builddir here.  (hint: dcopidl) -    -I$(top_srcdir)/kio/kio -I$(top_srcdir)/kio/bookmarks $(all_includes) +    -I$(top_builddir)/kio/kio -I$(top_srcdir)/kio/bookmarks $(all_includes)
svn path=/trunk/kdelibs/; revision=140997

--- a/kio/kfile/Makefile.am
+++ b/kio/kfile/Makefile.am
@@ -18,7 +18,7 @@
 
 
 INCLUDES= -I$(srcdir)/../libltdl/ -I$(top_srcdir) -I$(top_srcdir)/kdefx \
-    -I$(top_srcdir)/kio/kio -I$(top_srcdir)/kio/bookmarks $(all_includes)
+    -I$(top_builddir)/kio/kio -I$(top_srcdir)/kio/bookmarks $(all_includes)
 
 noinst_LTLIBRARIES  = libkfile.la
 
