Disable mcop-dcop bridge (kmcop) compilation. It doesn't work, and a working version would probably look quite a bit different.
svn path=/trunk/kdelibs/; revision=141817

--- a/arts/kde/Makefile.am
+++ b/arts/kde/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = . mcop-dcop
+SUBDIRS = .
 INCLUDES = -I$(includedir)/arts \
            -I$(top_builddir)/arts/kde/lib \
            -I$(top_srcdir) $(all_includes)
