CVS_SILENT made messages
svn path=/trunk/kdelibs/; revision=141973

--- a/kio/kfileplugin.desktop
+++ b/kio/kfileplugin.desktop
@@ -5,21 +5,30 @@ X-KDE-ServiceType=KFilePlugin
 Name=KFile Meta Data Plugin
 Name[ar]=ملحق KFile Meta Data
 Name[az]=KFile Meta Data Əlavəsi
+Name[bg]=Плъгин за KFile Meta Data
+Name[bs]=KFile Meta Data dodatak
+Name[cs]=Modul KFile pro metadata
 Name[da]=KFile Metadata-indstik
 Name[de]=KFile: Metadaten-Plugin
+Name[el]=Πρόσθετο ΜεταΔεδομένων του KFile
+Name[eo]=Dosierinterdatuma kromaĵo
 Name[es]=Plugin de meta datos KFile
 Name[fi]=KFile metatietosovelma
-Name[fr]=Module de méta-données kFile
+Name[fr]=Module de méta-données KFile
 Name[he]=תוסף מטא-נתונים ל-KFile
 Name[hu]=KFile metaadat-modul
+Name[it]=Plugin dei metadati per KFile
+Name[ja]=KFileメタデータプラグイン
 Name[lt]=KFile Meta duomenų priedas
 Name[lv]=KFailu Meta Datu Iespraudnis
 Name[nn]=KFile tilleggsmodul for metadata
 Name[pt]='Plugin' de Meta-Dados do KFile
-Name[pt_BR]='Plugin' de Meta-Dados do KFile
+Name[pt_BR]=Plugin KFile de Meta Dados
+Name[ro]=Modul meta date KFile
 Name[sk]=Modul KFile pre meta dáta
 Name[sl]=Vstavek za meta podatke pri KFile
 Name[sv]=Kfil metadatainsticksprogram
+Name[ven]=Meta data pulagini ya faela ya K
 Name[xx]=xx
 
 [PropertyDef::PreferredItems]
