install the icons
svn path=/trunk/kdelibs/; revision=142400

--- a/kdewidgets/Makefile.am
+++ b/kdewidgets/Makefile.am
@@ -18,6 +18,7 @@
 #    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 #    Boston, MA 02111-1307, USA.
 
+SUBDIRS=. pics
 AM_CXXFLAGS = -DQT_PLUGIN
 
 INCLUDES = -I$(top_srcdir)/kfile $(all_includes)
